Potential Mobile messagebox spacing fix

--- a/styles.css
+++ b/styles.css
@@ -416,4 +416,8 @@ p a:hover{
         overflow: scroll;
     }
 
+    #messagebox{
+        width: 90%;
+    }
+
 }
